# render-sandbox

./: .gitignore  CMakeLists.txt  README.md  bun.lockb  package.json
client/app/: index.ts
client/cpp/: CMakeLists.txt  main.cpp
client/cpp/assets/: arabic.txt  jap.txt  text.txt
client/cpp/assets/fonts/: Caveat-Regular.idx  Caveat-Regular.mesh  Caveat-Regular.vert  IBMPlexSansArabic-Regular.idx  IBMPlexSansArabic-Regular.mesh  IBMPlexSansArabic-Regular.vert  MPLUS1p-Regular.mesh  OpenSans-Bold.idx-brotli  OpenSans-Bold.mesh-brotli  OpenSans-Bold.vert-brotli  OpenSans-Regular.idx  OpenSans-Regular.idx-brotli  OpenSans-Regular.mesh  OpenSans-Regular.mesh-brotli  OpenSans-Regular.vert  OpenSans-Regular.vert-brotli  Overpass-Bold.idx  Overpass-Bold.mesh  Overpass-Bold.vert  Overpass-Regular.idx  Overpass-Regular.mesh  Overpass-Regular.vert  zxx-noise.idx  zxx-noise.mesh  zxx-noise.vert
client/cpp/assets/shaders/: vertex.glsl
client/cpp/device/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h
client/cpp/graphics/: Shapes-DelaBella.cpp  Shapes-libTess2.cpp  Shapes.cpp  Shapes.h
client/cpp/renderer/: Camera.h  Primitive.h  Renderer.cpp  Renderer.h
client/cpp/shaders/: fragment.glsl  vertex.glsl
client/cpp/text/: Font.cpp  Font.h  Layout.cpp
client/cpp/utils/: Compression.cpp  Compression.h  File.h  Math.h
client/public/: app.css  index.html
server/: bundler.ts  index.ts
